test/FAIL/dispcmd/memory_match/02_test_disp.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="no file loaded"
#-------

disp mem 0x1000:0x1014
